# semantic-namo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.py  main_client.py  main_server.py  package.xml  pyproject.toml  setup.py
assets/worlds/: blockage.yaml  random.yaml  sandbox.yaml
config/: config_dingo_push.yaml  config_heijn_push.yaml
config/actors/: dingo.yaml  heijn.yaml
config/mppi/: dingo_push.yaml
config/weights/: DingoCost.cfg
config/worlds/: avoidance.yaml  base.yaml  blockage.yaml  empty.yaml  experiment.yaml  experiment_0.yaml  experiment_1.yaml  random.yaml  sandbox.yaml  simple.yaml  simple_vicon.yaml  transfer.yaml  transit.yaml  vicon.yaml
control/: dingo_data_collector.py
launch/: client.launch  dingo.launch  namo.launch  server.launch  tests.launch  vicon.launch
monitor/: monitor.py
namo/: objective.py  scheduler.py
namo/a_star/: __init__.py  a_star.py
namo/control/: __init__.py  manual_control.py
namo/dashboard/: dashboard.py
namo/planning/: planner.py
namo/world/: environment.py
scripts/: collector  controller  environment  main_client  main_server  mimic_topic  node_client  node_collect  node_server  visualisation
src/control/: __init__.py  client.py  server.py
src/environment/: __init__.py  physical_world.py  simulate_world.py
src/monitor/: __init__.py  analyses.py  dashboard.py  monitor.py  viewer.py
tests/: analyse_benchmark.py  analyse_results.py  benchmark_global_planner  benchmark_passage_nodes  experiment_0  experiment_1  experiment_2  experiment_3  helper_plotter  setup_0  setup_1  setup_2
(+35 files in other folders)
